--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,19 @@
   line-height: 1rem;
 }
 
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
+
 @media (min-width: 640px) {
     .sm\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
            --tw-space-x-reverse: 0;
