--- a/app/globals.css
+++ b/app/globals.css
@@ -73,8 +73,12 @@
 }
 
 @layer base {
-  body {
+  html,
+    body {
     @apply overflow-x-hidden overflow-y-auto;
+    margin: 0;
+      padding: 0;
+      width: 100%;
   }
 }
 
